--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,9 @@ setw -g pane-base-index 1
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
+# quickly open a new window
+bind N new-window
+
 # split window and fix path for tmux 1.9
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
@@ -77,3 +80,15 @@ bind -t vi-copy 'y' copy-selection
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+##############################
+#### Color & Style Settings ###
+###############################
+
+source ~/.tmux/config/theme.sh
+
+##############################
+#### Plugins Settings       ###
+###############################
+
+source ~/.tmux/config/plugins.sh
