--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,10 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 #### Color & Style Settings ###
 ###############################
 
-source ~/.tmux/config/theme.sh
+# source ~/.tmux/config/theme.sh
+
+# Nova Theme
+source ~/.tmux/config/theme-nova.sh
 
 ##############################
 #### Plugins Settings       ###
