--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,11 @@
 set -g default-command "reattach-to-user-namespace -l bash"
 # tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+
+# These are the rules you need to use True Color and Nova terminal ANSI colors
+# # If you want Tmux to use the Nova color scheme, ensure you have installed a Nova plugin for your terminal first
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # automatically renumber tmux windows
 set -g renumber-windows on
