updated functions and aliass

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,10 @@ set -g default-command "reattach-to-user-namespace -l bash"
 # These are the rules you need to use True Color and Nova terminal ANSI colors
 # # If you want Tmux to use the Nova color scheme, ensure you have installed a Nova plugin for your terminal first
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-
+set -g xterm-keys on
+#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g terminal-overrides "*:kUP3=\e[1;9A,*:kDN3=\e[1;9B,*:kRIT3=\e[1;9C,*:kLFT3=\e[1;9D"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
 # automatically renumber tmux windows
 set -g renumber-windows on
 
