--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ set -g xterm-keys on
 #set -ga terminal-overrides ",xterm-256color:Tc"
 set -g terminal-overrides "*:kUP3=\e[1;9A,*:kDN3=\e[1;9B,*:kRIT3=\e[1;9C,*:kLFT3=\e[1;9D"
 #set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set -ga terminal-overrides ",*:Tc"
 # automatically renumber tmux windows
 set -g renumber-windows on
 
