update brew file

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,7 @@
+# ==========================
+# ===  General settings  ===
+# ==========================
+
 set -g default-command "reattach-to-user-namespace -l bash"
 # tmux display things in 256 colors
 #set -g default-terminal "screen-256color"
