--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ setw -g pane-base-index 1
 ######################
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+bind R source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # quickly open a new window
 bind N new-window
